Added Makefile and test programs
Added remaining functions to threads.h
Added stubs to threads.c
Completed mutex functions and call once function

--- a/VS/c11threads/c11threads.vcxproj
+++ b/VS/c11threads/c11threads.vcxproj
@@ -146,6 +146,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\oncetest.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\test.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\threads.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\threads.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
